<resources>
    <string name="app_name">Template_dpr_now</string>
    <string-array name="Text">
        <item>Apple </item>
        <item>Banana </item>
        <item>Cupcake </item>
        <item>Donute </item>
    </string-array>
    <string-array name="Test">
        <item>Arif </item>
        <item>Aan </item>
        <item>Bambang </item>
        <item>Budi </item>
        <item>Babeh </item>
        <item>Cece </item>
    </string-array>
    <string-array name="my_search">
        <item>Test </item>
        <item>Babeh </item>
        <item>Anak </item>
        <item>Betawi </item>
        <item>Asli </item>
    </string-array>
    <string-array name="tahunuu">
        <item>1946</item>
        <item>1947</item>
        <item>1948</item>
        <item>1949</item>
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
    <string-array name="tahun">
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
    <string name="judul_input">Isikan Aspirasi Anda</string>
    <string name="namatext">Nama</string>
    <string name="hint_namaisi">isikan nama lengkap</string>
    <string name="email">Email</string>
    <string name="hint_emailisi">isikan email anda</string>
    <string name="phone">Phone</string>
    <string name="hint_phone">isikan nomor handphone anda</string>
    <string name="jktext">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hint_time">isikan waktu anda</string>
    <string name="hint_date">isikan tanggal anda</string>
    <string name="essai">Isi Aduan</string>
    <string name="hint_essai">isikan aduan Anda</string>
    <string name="toogletext">aktifkan layanan dalam bentuk toast</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="ubah_mode">ubah mode tampilan</string>
    <string name="simpan">Simpan</string>
    <string name="termtext">Anda menyetujui, bahwa data yang diinputkan adalah data yang sebenarnya</string>
    <string name="nilai_app">Berapa penilaian anda terhadap aplikasi ini?</string>
    <string name="switchtext">Switch</string>
    <string name="waktu">Waktu</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="one">PENGADUAN</string>
    <string name="two">ASPIRASI</string>
    <string name="three">INFORMASI</string>


    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="card_info_placeholder">Dummy News</string>

    <string-array name="card_titles">
        <item>Alfa</item>
        <item>Bravo</item>
        <item>Charlie</item>
        <item>Delta</item>
    </string-array>

    <string-array name="card_info">
        <item>Echo</item>
        <item>Foxtrot</item>
        <item>Golf</item>
        <item>Hotel</item>
    </string-array>

    <array name="pilihan">
        <item>satu</item>
        <item>dua</item>
        <item>tiga</item>
        <item>empat</item>
        <item>lima</item>
    </array>


    <string-array name="font">
        <item>Pilih Font</item>
        <item>arial</item>
        <item>times</item>
    </string-array>
    <string name="keyword">Keyword</string>
    <string name="detail_agenda">Detail Agenda</string>
    <string name="judul_agenda">judul agenda</string>
    <string name="isi_agenda">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor sed viverra ipsum nunc aliquet bibendum enim. In massa tempor nec feugiat. Nunc aliquet bibendum enim facilisis gravida. Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper.</string>
    <string name="jam_berita">jam berita</string>
    <string name="kalender">Kalender</string>
    <string name="daftar_agenda">Daftar Agenda</string>
    <string name="status">Status</string>
    <string name="_00">00</string>
    <string name="jam">Jam</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="input_sql_lite">Input SQL Lite</string>
    <string name="upload">upload</string>
    <string name="lihat_daftar">LIHAT DAFTAR</string>
    <string name="tambahkan_gambar">tambahkan gambar</string>
    <string name="seberapa_besar_kinerjanya">seberapa besar kinerjanya :</string>
    <string name="_0">0</string>
    <string name="daftar_inputan_aspirasi">Daftar Inputan Aspirasi</string>
    <string name="jenis_kelamin">Jenis Kelamin :</string>
    <string name="radio">radio</string>
    <string name="technical">Technical</string>
    <string name="email_user">Email user</string>
    <string name="_6280000">6280000</string>
    <string name="checkbox">checkbox</string>
    <string name="seekbar">seekbar</string>
    <string name="isi_aspirasi_anda">Isi aspirasi anda disini adalaha bagaiman anda mau ngisi aja deh</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="file_lampiran">File lampiran</string>
    <string name="nilai_checkbox">Nilai Checkbox</string>
    <string name="p_l">P / L</string>
    <string name="nilai_persent">Nilai Persent</string>
    <string name="berapa">berapa %</string>
    <string name="update">Update</string>
    <string name="text">Text</string>
    <string name="select_text">Select Text</string>
    <string name="judul_berita">Judul berita</string>
    <string name="text_detail_berita">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor sed viverra ipsum nunc aliquet bibendum enim. In massa tempor nec feugiat. Nunc aliquet bibendum enim facilisis gravida. Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper.</string>
    <string name="kategori">kategori</string>
    <string name="detail_berita">Detail Berita</string>
    <string name="show_more">Show More</string>
    <string name="berita_terkini">Berita Terkini</string>
    <string name="daftar_semua_anggota_dewan">Daftar Semua Anggota Dewan</string>
    <string name="fraksi">Fraksi</string>
    <string name="dapil">Dapil</string>
    <string name="daftar_akd">Daftar Akd</string>
    <string name="daftar_undang_undang">Daftar Undang-Undang</string>
    <string name="nomor">Nomor</string>
    <string name="tentang">Tentang</string>
    <string name="input_pengaduan">Input Pengaduan</string>
    <string name="isikan_inputan_anda">Isikan Inputan Anda</string>
    <string name="judul_aduan">Judul Aduan</string>
    <string name="dpr_now">DPR Now!</string>
    <string name="daftar_anggota">Daftar Anggota</string>
    <string name="pelayanan_masyarakat">Pelayanan Masyarakat</string>
    <string name="daftar_majalah">Daftar Majalah</string>
    <string name="agenda">Agenda</string>
    <string name="undang_undang">Undang-Undang</string>
    <string name="daftar_komisi">Daftar Komisi</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="informasi">Informasi</string>
    <string name="masukkan_nama_file">Masukkan Nama File</string>
    <string name="pilih_foto">Pilih foto</string>
    <string name="lihat_foto_yang_terupload">Lihat foto yang terupload</string>
    <string name="nama_file">Nama File</string>
    <string name="upload_file">Upload file</string>
    <string name="view_file">View file</string>
    <string name="nip">NIP</string>
    <string name="jabatan">Jabatan</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="klik_disini">klik disini</string>
    <string name="daftar">DAFTAR</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="masuk_dengan_e_mail">Masuk dengan E-mail</string>
    <string name="masuk_dengan_api">Masuk dengan API</string>
    <string name="input_tahun">Input Tahun</string>
    <string name="daftar_majalah_dpr_ri">Daftar Majalah DPR-RI</string>
    <string name="tahun">Tahun</string>
    <string name="edisi">Edisi</string>
    <string name="file">File</string>
    <string name="detail_pelayanan_masyarakat">Detail Pelayanan Masyarakat</string>
    <string name="tanggal">Tanggal</string>
    <string name="judul">Judul</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="date">Date</string>
    <string name="isi_aduan_anda">Isi aduan anda</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="standart">standart</string>
    <string name="dark">dark</string>
    <string name="sunset">sunset</string>
    <string name="name">Name</string>
    <string name="nama_judul">Nama judul</string>
    <string name="slide_1">Dapatkan informasi berita terkini dalam internal Sekjen DPR-RI, dengan lebih mudah!</string>
    <string name="slide_2">Nikmati video DPR dengan lebih mudah, dan media yang lebih interaktif</string>
    <string name="slide_3">Dapatkan informasi terlengkap seputar DPR-RI</string>
    <string name="slide_4">Dengan aplikasi internal DPR-RI, dengan lebih mudah dapatkan informasi terkini!</string>
    <string name="next_slide">Next Slide</string>
    <string name="aplikasi_informasi_internal_dpr">Aplikasi informasi internal DPR</string>
    <string name="version">Version 1.0</string>
    <string name="time">time</string>
    <string name="tanggal_berita">tanggal_berita</string>
    <string name="pilihan_kebawah">pilihan_kebawah</string>
    <string name="copyright">Copyright © PKL Teknik Informatika 2019</string>

</resources>
