<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--bagian untuk membuat scroll activity-->
<ScrollView
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:padding="25dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul_input"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/TS_judul" />

        <TextView
            android:id="@+id/namatext"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/textview"
            android:text="@string/namatext"
            android:textSize="@dimen/TS_text" />

        <AutoCompleteTextView
            android:id="@+id/namaview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/namatext"
            android:layout_below="@id/textview"
            android:hint="@string/hint_namaisi"
            android:textSize="@dimen/TS_text" />

        <TextView
            android:id="@+id/emailtext"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:layout_below="@id/namatext"
            android:textSize="@dimen/TS_text" />

        <AutoCompleteTextView
            android:id="@+id/emailview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_emailisi"
            android:inputType="textEmailAddress"
            android:layout_below="@id/namatext"
            android:textSize="@dimen/TS_text"
            android:layout_toRightOf="@+id/emailtext" />

        <TextView
            android:id="@+id/phonetext"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/emailtext"
            android:text="@string/phone"
            android:textSize="@dimen/TS_text" />

        <EditText
            android:id="@+id/phoneview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_phone"
            android:layout_below="@id/emailtext"
            android:layout_toRightOf="@id/emailtext"
            android:inputType="phone"
            android:textSize="@dimen/TS_text" />

        <TextView
            android:id="@+id/timetext"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Date"
            android:layout_marginTop="20dp"
            android:text="@string/waktu"
            android:textSize="@dimen/TS_text" />

        <EditText
            android:id="@+id/Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_time"
            android:layout_marginTop="20dp"
            android:layout_below="@id/datetext"
            android:layout_toRightOf="@id/timetext"
            android:inputType="time"
            android:textSize="@dimen/TS_text" />

        <TextView
            android:id="@+id/datetext"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneview"
            android:layout_marginTop="20dp"
            android:text="@string/tanggal"
            android:textSize="@dimen/TS_text" />

        <EditText
            android:id="@+id/Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phonetext"
            android:layout_toRightOf="@id/timetext"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_date"
            android:inputType="datetime"
            android:textSize="@dimen/TS_text" />


        <TextView
            android:id="@+id/essaitext"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/Time"
            android:text="@string/essai"
            android:textSize="@dimen/TS_text" />

        <EditText
            android:id="@+id/essai"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/hint_essai"
            android:layout_toRightOf="@id/essaitext"
            android:layout_below="@id/timetext"
            android:inputType="textMultiLine"
            android:textSize="@dimen/TS_text" />

        <TextView
            android:id="@+id/spinnertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/essai"
            android:text="@string/pilihan_kebawah"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnertext"
            android:entries="@array/pilihan"/>

        <TextView
            android:id="@+id/updatefile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_lampiran"
            android:layout_margin="15dp"
            android:layout_below="@id/spinner"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"/>

        <ImageView
            android:id="@+id/updategambar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/spinner"
            android:layout_toRightOf="@+id/updatefile"/>

        <TextView
            android:id="@+id/checkboxtext"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updategambar"
            android:text="@string/nilai_checkbox"
            android:textSize="@dimen/TS_text" />

        <EditText
            android:id="@+id/checkboxview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nilai_checkbox"
            android:layout_toRightOf="@id/checkboxtext"
            android:layout_below="@id/updategambar"
            android:textSize="@dimen/TS_text" />

        <TextView
            android:id="@+id/radiotext"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkboxtext"
            android:text="@string/jenis_kelamin"
            android:textSize="@dimen/TS_text" />

        <EditText
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/p_l"
            android:layout_toRightOf="@id/radiotext"
            android:layout_below="@id/checkboxtext"
            android:textSize="@dimen/TS_text" />

        <TextView
            android:id="@+id/seekbartext"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radiotext"
            android:text="@string/nilai_persent"
            android:textSize="@dimen/TS_text" />

        <EditText
            android:id="@+id/seekbar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/berapa"
            android:layout_toRightOf="@id/seekbartext"
            android:layout_below="@id/radiotext"
            android:textSize="@dimen/TS_text" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/seekbartext"
            android:text="@string/update" />

    </RelativeLayout>

</ScrollView>

</RelativeLayout>