<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_text"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_image"
        android:hint="@string/masukkan_nama_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/uploadimage"
        android:layout_below="@+id/btn_image"
        android:text="@string/upload"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageview"
        android:layout_above="@id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_below="@+id/uploadimage"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_image"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_foto"/>

    <TextView
        android:id="@+id/viewimage"
        android:layout_marginTop="60dp"
        android:layout_below="@id/uploadimage"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lihat_foto_yang_terupload"/>

</RelativeLayout>